# RaytracerNJ

./: CMakeLists.txt  README.md
include/: BVH.h  OBJ_Loader.h  camera.h  global.h  intersect.h  light.h  material.h  object.h  renderer.h  scene.h  triangle.h
src/: BVH.cpp  camera.cpp  main.cpp  object.cpp  renderer.cpp  scene.cpp  triangle.cpp
